--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,4 @@
-- Make codegen and VM use result and try for failures
+X Make codegen and VM use result and try for failures
 - Use `debug` macro for debugging output
 - Fix up evaluator API
 - Clean up parser formatting and error messages
